Updated Plugin compliance for Java 8. Changes: Swapped Platform.subMonitorFor with SubMonitor (deprecation), Updated Eclipse settings and classpaths, Swapped org.eclipse.osgi.service.datalocation with org.eclipse.osgi.service.datalocation (deprecation).