@@ -1,10 +1,10 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2007 IBM Corporation and others.
+ * Copyright (c) 2004, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-v10.html
- * 
+ *
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
@@ -18,34 +18,36 @@ import org.eclipse.core.runtime.IRegistryChangeListener;
 import org.eclipse.core.runtime.Platform;
 
 /**
- * Allows test cases to wait for event notification.  
+ * Allows test cases to wait for event notification.
  */
-@SuppressWarnings({"unchecked", "rawtypes"})
 public class TestRegistryChangeListener implements IRegistryChangeListener {
 
 	/**
-	 * Indicates that no matching even has been received 
+	 * Indicates that no matching even has been received
 	 */
 	public static final int NO_EVENT = -1;
 
-	private List events = new LinkedList();
-	private List simpleEvents = new LinkedList();
+	private List<IRegistryChangeEvent> events = new LinkedList<>();
+	private List<Integer> simpleEvents = new LinkedList<>();
 	private String xpNamespace;
 	private String xpId;
 	private String extNamespace;
 	private String extId;
 
 	/**
-	 * Creates a new listener. The parameters allow filtering events based on extension point/extension's 
-	 * namespaces/ids.	
+	 * Creates a new listener. The parameters allow filtering events based on extension point/extension's
+	 * namespaces/ids.
 	 */
 	public TestRegistryChangeListener(String xpNamespace, String xpId, String extNamespace, String extId) {
-		if (xpId != null && xpNamespace == null)
+		if (xpId != null && xpNamespace == null) {
 			throw new IllegalArgumentException();
-		if (extId != null && extNamespace == null)
+		}
+		if (extId != null && extNamespace == null) {
 			throw new IllegalArgumentException();
-		if (xpId == null && extId != null)
+		}
+		if (xpId == null && extId != null) {
 			throw new IllegalArgumentException();
+		}
 		this.xpNamespace = xpNamespace;
 		this.xpId = xpId;
 		this.extNamespace = extNamespace;
@@ -55,6 +57,7 @@ public class TestRegistryChangeListener implements IRegistryChangeListener {
 	/**
 	 * @see IRegistryChangeListener#registryChanged
 	 */
+	@Override
 	public synchronized void registryChanged(IRegistryChangeEvent newEvent) {
 		IExtensionDelta delta = null;
 		if (xpId != null) {
@@ -62,14 +65,16 @@ public class TestRegistryChangeListener implements IRegistryChangeListener {
 				delta = newEvent.getExtensionDelta(xpNamespace, xpId, extNamespace + '.' + extId);
 			} else {
 				IExtensionDelta[] deltas = newEvent.getExtensionDeltas(xpNamespace, xpId);
-				if (deltas.length != 0)
+				if (deltas.length != 0) {
 					delta = deltas[0];
+				}
 			}
 		}
-		if (delta == null)
+		if (delta == null) {
 			return; // this is not the event we are interested in
+		}
 		events.add(newEvent);
-		simpleEvents.add(new Integer(delta.getKind()));
+		simpleEvents.add(Integer.valueOf(delta.getKind()));
 		notifyAll();
 	}
 
@@ -81,16 +86,17 @@ public class TestRegistryChangeListener implements IRegistryChangeListener {
 	 * invalid. Method is preserved for backward compatibility, but users are strongly encouraged
 	 * to switch to {@link #eventTypeReceived(long)}.
 	 * </p>
-	 * 
-	 * @param timeout the maximum time to wait in milliseconds. If zero, this method will 
-	 * block until an event is received 
+	 *
+	 * @param timeout the maximum time to wait in milliseconds. If zero, this method will
+	 * block until an event is received
 	 * @return the first event received, or <code>null</code> if none was received
-	 * 
+	 *
 	 * @deprecated use {@link #eventTypeReceived(long)} instead
 	 */
 	public synchronized IRegistryChangeEvent getEvent(long timeout) {
-		if (!events.isEmpty())
-			return (IRegistryChangeEvent) events.remove(0);
+		if (!events.isEmpty()) {
+			return events.remove(0);
+		}
 		try {
 			wait(timeout);
 		} catch (InterruptedException e) {
@@ -100,17 +106,17 @@ public class TestRegistryChangeListener implements IRegistryChangeListener {
 	}
 
 	/**
-	 * Wait for a registry event that fits IDs specified in the constructor, blocking for 
+	 * Wait for a registry event that fits IDs specified in the constructor, blocking for
 	 * at most <code>timeout</code> milliseconds.
 	 * <p>
-	 * Note: do NOT mix calls to {@link #getEvent(long)} with calls to this method in the same 
+	 * Note: do NOT mix calls to {@link #getEvent(long)} with calls to this method in the same
 	 * instance of this class.
 	 * </p>
-	 * 
-	 * @param timeout the maximum time to wait in milliseconds. If zero, this method will 
-	 * block until an event is received 
+	 *
+	 * @param timeout the maximum time to wait in milliseconds. If zero, this method will
+	 * block until an event is received
 	 * @return event type
-	 * 
+	 *
 	 * @since 3.4
 	 */
 	public synchronized int eventTypeReceived(long timeout) {
@@ -118,28 +124,29 @@ public class TestRegistryChangeListener implements IRegistryChangeListener {
 		while (simpleEvents.isEmpty()) {
 			try {
 				long sleepTime = timeout - (System.currentTimeMillis()-start);
-				if (sleepTime <= 0)
+				if (sleepTime <= 0) {
 					break;
+				}
 				wait(sleepTime);
 			} catch (InterruptedException e) {
 				// who cares?
 			}
 		}
-		return simpleEvents.isEmpty() ? NO_EVENT : ((Integer) simpleEvents.remove(0)).intValue();
+		return simpleEvents.isEmpty() ? NO_EVENT : simpleEvents.remove(0).intValue();
 	}
 
 	/**
-	 * Wait for a registry event that fits IDs specified in the constructor, blocking for 
+	 * Wait for a registry event that fits IDs specified in the constructor, blocking for
 	 * at most <code>timeout</code> milliseconds.
 	 * <p>
-	 * Note: do NOT mix calls to {@link #getEvent(long)} with calls to this method in the same 
+	 * Note: do NOT mix calls to {@link #getEvent(long)} with calls to this method in the same
 	 * instance of this class.
 	 * </p>
-	 * 
-	 * @param timeout the maximum time to wait in milliseconds. If zero, this method will 
-	 * block until an event is received 
+	 *
+	 * @param timeout the maximum time to wait in milliseconds. If zero, this method will
+	 * block until an event is received
 	 * @return <code>true</code> if event was received; <code>false</code> otherwise
-	 * 
+	 *
 	 * @since 3.4
 	 */
 	public synchronized boolean eventReceived(long timeout) {
